[package]
name = "pss-nlp"
version = "0.1.0"
edition = "2021"
authors = ["Emasoft <713559+Emasoft@users.noreply.github.com>"]
description = "NLP-based negation detection for Perfect Skill Suggester"
license = "MIT"

[dependencies]
nlprule = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
anyhow = "1.0"

[build-dependencies]
nlprule-build = "0.6"

[[bin]]
name = "pss-nlp"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
