[package]
name = "perfect-skill-suggester"
version = "2.5.0"
edition = "2021"
authors = ["Emasoft <713559+Emasoft@users.noreply.github.com>"]
description = "High-accuracy skill suggester for Claude Code with weighted scoring, synonym expansion, and confidence routing"
license = "MIT"
repository = "https://github.com/Emasoft/perfect-skill-suggester"
keywords = ["claude-code", "skills", "activation", "hooks"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
colored = "3.0"
regex = "1.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lazy_static = "1.4"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10.0"
dirs = "6.0"
cozo = { version = "0.7", package = "cozo-ce", features = ["storage-sqlite", "storage-sqlite-src", "rayon"], default-features = false }
memmap2 = "0.9"

[[bin]]
name = "pss"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
